# recisnap-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .spaceignore  Dockerfile  Dockerfile.test  README.md  Spacefile  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  local_dev.sh  main.py  materials.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_prod.txt  run_tests.sh
.github/workflows/: github-actions-deta-space-deploy.yml
app/: main.py
app/domain/: entities.py  errors.py  repositories.py  utils.py
app/domain/usecases/: general_usecases.py  images_usecases.py  instructions_usecases.py  materials_usecases.py  models_usecases.py  users_usecases.py
app/infrastructure/: context.py  dependencies.py  errors.py  logs.py  repositories.py  schemas.py  settings.py
app/infrastructure/routers/: images.py  instructions.py  materials.py  models.py  users.py
domain/: entities.py  errors.py  repositories.py  usecases.py
domain/usecases/: general_usecases.py  images_usecases.py  instructions_usecases.py  materials_usecases.py  models_usecases.py  pages_usecases.py  users_usecases.py
infrastructure/: app.py  context.py  dependencies.py  errors.py  exceptions_handlers.py  logs.py  repositories.py  settings.py  views.py
infrastructure/routers/: health.py  images.py  instructions.py  materials.py  users.py
tests/: conftest.py
tests/infrastructure/routes/: health_test.py  users_test.py
