[project]
requires-python = ">=3.9"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "N",  # pep8-naming
    "I",  # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

ignore = [
    "E501",
    "B008",
    "C901",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 100

target-version = "py39"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
force-single-line = true

[tool.poetry]
name = "image-predictor-service"
version = "0.1.0"
description = ""
authors = ["santigandolfo <santiago.gandolfo@tiendanube.com>"]
readme = "README.md"
packages = [{include = "image_predictor_service"}]

[tool.poetry.dependencies]
python = "^3.9"
asyncer = "^0.0.2"
deta = "^1.1.0"
fastapi = "^0.97.0"
firebase-admin = "^6.1.0"
httpx = "^0.24.1"
motor = "^3.1.2"
odmantic = "^0.9.2"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.9"}
python-multipart = "^0.0.6"
uvicorn = {extras = ["standard"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
